--- a/web/src/styles/_layout.scss
+++ b/web/src/styles/_layout.scss
@@ -15,7 +15,7 @@
 }
 
 .page-container--auth {
-  max-width: 400px;
+  max-width: 445px;
   margin: 60px auto 0;
   padding: 0 16px 40px;
 }
